Vienna ChangeLog File
=====================

As you release new builds, update this file with details of the changes in each build. The
most recent build should be at the top of this file.

Thanks!

2.0.3.2031
----------
- Completed Japanese localisation.
- Bug fixes.

2.0.2.2030
----------
- Completed Spanish localisation.

2.0.2.2029
----------
- Fix database performance issue introduced in 2026.

2.0.1.2028 (2.0.1 Release Build)
--------------------------------
- Updated localisation.

2.0.1.2027
----------
- For feeds that have no title and one cannot be synthesised, we now set the title to (No Title).
- Made click on the Growl notification work again. It broke when we moved to 0.7.4.
- Correctly set focus on the web page in a new tab. (Code contributed by Jeffrey Johnson).
- Fix a build 2025 crashing bug.
- Several localisation updates.

2.0.1.2026
----------
- Universal binary build.
- Updated to Growl 0.7.4.
- No longer prompt if Vienna is exited while a connection is in progress.
- Better truncation of feed names in the folder list. (Code contributed by David Kocher).
- Handle HTML redirects in the feed for sources such as MSN Spaces.
- Save and restore the currently selected article when you exit and restart Vienna.
- Support use of the Shift key to open a link in the alternate browser. (Code contributed by Jeffrey Johnson).
- Added Japanese localisation. (Thanks to Daisuke).
- Added Spanish localisation. (Thanks to Carlos Morales).
- Shift+Spacebar scrolls up the article view or goes to the previously viewed message.
- Added four more built-in styles: Broadsheet Clipping, Perlucida, Prague and Prague-light.

2.0.0.2025 (2.0 Release Build)
------------------------------
- Added Dutch localisation (Thanks to Martijn van Exel).
- Fix corrupted display of iframe on some articles due to encoding mismatch.
- Fix Mark All Read behaviour in smart folders which broke in 2024.
- Fix crash on closing tabs.

2.0.0.2024
----------