@@ -9,6 +9,7 @@ Thanks!
 2.0.3.2031
 ----------
 - Completed Japanese localisation.
+- Support Local File subscriptions in New Subscription sheet.
 - Bug fixes.
 
 2.0.2.2030
